removed created and updated at from the documentation
